--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
   }
               </code></pre>
           </section>
+          <section>
+            <h1>laat de keuze bij de gebruiker/ontwikkelaar</h1>
+          </section>
         </section>
         <section>
           <section>
@@ -158,6 +161,9 @@
           </section>
         </section>
         <section>
+          <section>
+           <h1>data is op zichelf niets</h1>
+          </section>
           <section>
             <img src="assets/img/DIK.png" />
           </section>
