--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               </code></pre>
           </section>
           <section>
-            <h1>laat de keuze bij de gebruiker/ontwikkelaar</h1>
+            <h3>laat de keuze bij de gebruiker/ontwikkelaar</h3>
           </section>
         </section>
         <section>
@@ -162,7 +162,7 @@
         </section>
         <section>
           <section>
-           <h1>data is op zichelf niets</h1>
+           <h3>data is op zichelf niets</h3>
           </section>
           <section>
             <img src="assets/img/DIK.png" />
@@ -172,6 +172,22 @@
           </section>
           <section>
             <img src="assets/img/DIK2.png" />
+          </section>
+        </section>
+        <section>
+          <section>
+            <h3>Silos zijn makkelijk</h3>
+            <img src="assets/img/silos.jpg" />
+            <span><a href="https://secure.flickr.com/photos/docsearls/5500714140/">docsearls</a></span>
+          </section>
+          <section>
+            <h3>Combineren van data is lastig</h3>
+          </section>
+          <section>
+            <img src="assets/img/nxt.gif" />
+          </section>
+          <section>
+            <img src="assets/img/3di.gif" />
           </section>
         </section>
         <section>
