--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <section>
           <p>We geven iedereen open data. Hoezee.</p>
           <img src="assets/img/greatgatsby.gif" />
-          <a href="mailto:fritz.vandeventer@nelenpschuurmans.nl">fritz.vandeventer@nelen-schuurmans.nl</a>
+          <p><a href="mailto:fritz.vandeventer@nelenpschuurmans.nl">fritz.vandeventer@nelen-schuurmans.nl</a></p>
         </section>
     </div>
 </div>
